# amazon-s3-component

./: .gitignore  Cargo.toml  Makefile  README.md  edgee-component.toml
.github/workflows/: check.yml  wasm-build-release.yml
src/: lib.rs  s3_payload.rs
