[package]
name = "s3-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
aws-credential-types = "1.2.1"
aws-sigv4 = "1.2.7"
aws-smithy-runtime-api = "1.7.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
md5 = "0.7.0"
num-bigint = "0.4.5"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_qs = "0.13.0"
sha2 = "0.10.8"
url = "2.5.3"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
wit-bindgen = "0.34.0"

[dev-dependencies]
cargo-llvm-cov = "0.6.15"
pretty_assertions = "1.4.1"
wit-deps = "0.4.0"
