[package]
name = "s3-component"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
aws-sigv4 = "1.2.7"
aws-smithy-runtime-api = "1.7.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }
wit-bindgen = "0.41.0"

[dev-dependencies]
cargo-llvm-cov = "0.6.15"
pretty_assertions = "1.4.1"
wit-deps = "0.5.0"
