[package]
name = "s3-component"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
aws-credential-types = { version = "1.2.3", features = ["hardcoded-credentials"] }
aws-sigv4 = "1.3.3"
aws-smithy-runtime-api = "1.8.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
wit-bindgen = "0.41.0"

[dev-dependencies]
cargo-llvm-cov = "0.6.17"
pretty_assertions = "1.4.1"
